# Peridynamics

./: README.md  kernel_algo1_i.cl  kernel_algo1_i_j.cl  kernel_main.cl  mesh.cpp  parallel_algo1.cpp  parallel_main.cpp  routines.cpp  serial.cpp  tensor_algebra.h
Benchmark_model_01/: benchmark_01.cpp  longitudinal_bar_vibration.cpp  longitudinal_bar_vibration.f90
Benchmark_model_02/: bar_under_tension.f90  benchmark_02.cpp  benchmark_02_1d.cpp
Benchmark_model_05/: benchmark_05.cpp  benchmark_05_1d.cpp  benchmark_05_analytical.cpp  block_under_tension.cpp  block_under_tension.f90
Benchmark_model_05/Cuda/: README.md  benchmark_05_parallel.cu  benchmark_05_parallelv2.cu  benchmark_05_parallelv3.cu  benchmark_05_parallelv4.cu  benchmark_05_parallelv5.cu  kernel_main.h
Benchmark_model_05/OpenCl/: README.md  benchmark_05_parallel.cpp  benchmark_05_parallelv2.cpp  benchmark_05_parallelv3.cpp  benchmark_05_parallelv4.cpp  benchmark_05_parallelv5.cpp  kernel_main.cl  kernel_main.h
Benchmark_model_05/cuda_lammps/: README.md  benchmark_05_parallel_lammpsv4.cu  kernel_main_lammps.h
VTK_reader/: README
VTK_reader/ColoredPoints/: CMakeLists.txt  ColoredPoints.cxx
VTK_reader/v03/: CMakeLists.txt  README  ReadLegacyUnstructuredGrid.cxx
